--- a/Presentation-SBI-Lab-Googlevis.Rmd
+++ b/Presentation-SBI-Lab-Googlevis.Rmd
@@ -5,7 +5,7 @@ date: "November 05, 2018"
 output: html_document
 ---
 
-<img src="C:\Users\joao_\Dropbox\Data Science\UCLA\Git\UCLAx Silicon Beach Innovation Lab\Images\logo.jpg" >
+<img src="C:\Users\joao_\Dropbox\Data Science\UCLA\Git\ucla-sbi\Images\logo.jpg" >
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
